<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree</string>
    <string name="notification_description_success">The download completed successfully!</string>
    <string name="notification_description_failure">The download failed. Please try again.</string>
    <string name="notification_button">See details</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading</string>
    <string name="radio_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_load_app">LoadApp - Current repository by Udacity</string>
    <string name="radio_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="download_image">download image</string>
    <string name="select_url">Please select the file to download</string>
    <string name="permission_needed_message">This app needs permission to send notifications</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="status_success">Success</string>
    <string name="status_fail">Fail</string>
    <string name="ok_button_name">OK</string>

    <string name="download_notification_channel_id" translatable="false">download_channel</string>
    <string name="download_notification_channel_name" translatable="true">Download</string>
    <string name="download_notification_channel_description">Download reminder</string>
	<string name="status_image">Status image</string>
	<string name="show_status">Show status</string>
</resources>
